--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	<script src="js/jquery.jbar2.js"></script>
 	<script>
 	$(document).ready(function() {
-		$.jBar.show('message')
+		$.jBar.init('message')
 	});
 	</script>
 </head>
