update readme, rename css

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	</style>
 	
 	<!-- jBar2 -->
-	<link rel="stylesheet" href="css/bar.css">
+	<link rel="stylesheet" href="css/jbar2.css">
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
 	<script src="js/jquery.jbar2.js"></script>
 	<script>
